--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
+    "ts-node": "^10.9.1",
     "tsx": "^4.6.1",
     "typescript": "^5.3.2",
     "vitest": "^0.34.6"
